# pedestrian-navigation

./: README.md
src/: 操作手册_RL  操作指南  数据采集（含label）操作手册
src/DDPG/: depth_cnn_nornn_ros.py  depth_semantic_two_nets_ros_black_bcg.py  gym_ddpg.py  navi_actor_network.py  navi_ddpg.py  navi_env.py  navi_state.py
src/DDPG-navi/: start_training.py
src/DDPG-navi/config/: parameters.yaml
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/config/: ros.yaml
src/eed_display/: CMakeLists.txt  README.md  package.xml
src/eed_display/launch/: pub_lantern_and_display.launch
src/eed_display/src/: display.cpp  lantern_output.cpp
src/gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_openni_kinect.cpp
src/gym_ped_sim/actor_services/param/: forceFactors.yaml
src/gym_ped_sim/actor_services/src/: navi_passing.py  passing_wall_4.py
src/gym_ped_sim/actor_services/worlds/: ped.world  (+2 more)
src/radar_display/: CMakeLists.txt
src/radar_display/launch/: global_plan.launch  global_plan_test_pannel.launch  global_plan_test_random_pannel.launch
src/radar_display/src/: global_path.cpp  global_path_test_world.cpp  global_path_test_world_random.cpp  global_path_without_record.cpp
src/turtlebot/turtlebot_teleop/: CMakeLists.txt
src/uavInfo/: CMakeLists.txt
src/uavInfo/src/: processData_RGB.cpp  processData_origin (copy).cpp  processData_origin.cpp  processData_with_depth_img.cpp  processData_with_depth_img_noise.cpp  processData_with_rgb_img_noise.cpp  read_csv_rgb.py  recordRouteComm_actor.cpp  recordRouteComm_crowded_actor.cpp  recordRouteCommand.cpp
(+15 files in other folders)
